<resources>
    <string name="app_name">Smart Feed</string>
    <string name="hint_nama">Nama Lengkap</string>
    <string name="hint_email">Email</string>
    <string name="hint_no_telepon">No. Telepon</string>
    <string name="tombol_simpan">Simpan</string>
    <string name="ubah_foto_profil">Ubah Foto Profil</string>
    <string name="kembali">Kembali</string>
    <string name="edit_kata_sandi">Edit Kata Sandi</string>
    <string name="kata_sandi_lama">Kata Sandi Lama</string>
    <string name="tampilkan_kata_sandi_lama">Tampilkan Kata Sandi Lama</string>
    <string name="kata_sandi_baru">Kata Sandi Baru</string>
    <string name="tampilkan_kata_sandi_baru">Tampilkan Kata Sandi Baru</string>
    <string name="ulangi_kata_sandi_baru">Ulangi Kata Sandi Baru</string>
    <string name="tampilkan_konfirmasi_kata_sandi">Tampilkan Konfirmasi Kata Sandi</string>
    <string name="lupa_kata_sandi">Lupa Kata Sandi?</string>
    <string name="simpan">Simpan</string>

</resources>